--- a/lib/client/app/application/partials/navigation-menu.html
+++ b/lib/client/app/application/partials/navigation-menu.html
@@ -108,13 +108,13 @@
                 </md-tab>
             </md-tabs>
         </div>
-        <div class="container navigation widget" layout-margin flex="100" layout="row" layout-align="center center" layout-wrap style="padding-bottom: 48px;" ng-if="menu_title == 'Galleries'">
+        <div class="container navigation widget" layout-margin flex="100" layout="row" layout-align="center center" layout-wrap style="padding-bottom: 48px;" ng-if="menu_title == 'Projects'">
             <div flex="100" layout-margin>
                 <md-grid-list md-cols="4" md-cols-xs="4" md-cols-sm="4" md-cols-md="6" md-cols-gt-md="6" md-row-height-gt-md="1:1" md-row-height="1:1" md-gutter="8px" md-gutter-gt-sm="4px">
-                    <md-grid-tile ng-repeat="tile in featured_galleries | limitTo: 6" md-rowspan="3" md-rowspan-xs="2" md-rowspan-sm="2" md-colspan="3" md-colspan-sm="2" md-colspan-xs="2" ng-class="tile.background" style="overflow: hidden;" ng-init="hovered = false" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false">
-                    <a href="/gallery/{{tile.url}}">
-                        <img ng-src="{{tile.source}}" style="width: auto; max-width:300%; min-height: 100%;">
-                        <md-grid-tile-footer ng-class="{'active': hovered}"><h3 md-truncate>{{tile.name}}<md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Go to gallery {{tile.name}}" md-font-library="material-icons">chevron_right</md-icon></h3></md-grid-tile-footer>
+                    <md-grid-tile ng-repeat="tile in projectslist | limitTo: 6" md-rowspan="3" md-rowspan-xs="2" md-rowspan-sm="2" md-colspan="3" md-colspan-sm="2" md-colspan-xs="2" style="overflow: hidden;" ng-init="hovered = false" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false">
+                    <a href="/projects/{{tile.settings.url}}">
+                        <img ng-src="{{tile.data.page.foreground.images.source}}" style="width: auto; max-width:300%; min-height: 100%;">
+                        <md-grid-tile-footer ng-class="{'active': hovered}"><h3 md-truncate>{{tile.name}}<md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Go to gallery {{tile.settings.name}}" md-font-library="material-icons">chevron_right</md-icon></h3></md-grid-tile-footer>
                     </a>
                     </md-grid-tile>
                 </md-grid-list>
