--- a/lib/client/app/application/partials/navigation-dropdown.html
+++ b/lib/client/app/application/partials/navigation-dropdown.html
@@ -15,11 +15,12 @@
     .dropdown md-tabs.md-default-theme .md-tab .md-ripple-container, .dropdown md-tabs .md-tab .md-ripple-container {
         color: {{base_hue_lightest.value}}!important; 
     }
+    .navigation.widget md-input-container.md-default-theme .md-input, .navigation.widget md-input-container .md-input {color: {{base_hue_lightest.value}}!important;}
 </style>
 
 <md-card ng-show="sub_navigation_panel" flex="100" layout="row" layout-align="center start" layout-align-gt-sm="center center" layout-wrap class="sub-navigation dropdown md-whiteframe-8dp" ng-attr-style="overflow: hidden; overflow-y: auto; position: fixed; background: {{base_hue_darkest.value}}; width: {{scroll_bar_aware_window_width}}px; margin: 0;" ng-class="{'section-3-ms-explorer': browser == 'ie', 'open': sub_navigation_panel, 'close': !sub_navigation_panel}">
 
-    <md-button class="md-icon-button" ng-click="close_menu()" style="position: absolute; top: 33px; right: 16px; z-index: 5; cursor: pointer;" aria-label="Close">
+    <md-button class="md-icon-button" ng-click="close_menu()" style="position: absolute; top: 33px; right: 16px; z-navigation: 5; cursor: pointer;" aria-label="Close">
     	<md-icon ng-attr-style="color: {{base_hue_lightest.value}};">close</md-icon>
     </md-button>
 
@@ -53,10 +54,21 @@
             <div flex="100" layout-margin>
                 <md-grid-list md-cols="4" md-cols-xs="4" md-cols-sm="4" md-cols-md="6" md-cols-gt-md="6" md-row-height-gt-md="175px" md-row-height-gt-sm="200px" md-row-height="125px" md-gutter="8px" md-gutter-gt-sm="4px">
                     <md-grid-tile class="md-whiteframe-4dp" ng-repeat="tile in projectslist | limitTo: -6" md-rowspan="1" md-rowspan-xs="1" md-rowspan-sm="1" md-colspan="4" md-colspan-gt-md="3" md-colspan-md="3" md-colspan-sm="4" md-colspan-xs="4" style="overflow: hidden;" ng-init="hovered = false" ng-mouseenter="hovered = true" ng-mouseleave="hovered = false">
-                        <a href="{{tile.url}}">
-                            <img ng-src="{{tile.source}}" style="width: auto; max-width:300%; min-height: 100%;">
-                            <md-grid-tile-footer md-truncate ng-class="{'active': hovered}"><h3 style="white-space: pre-wrap;">{{tile.name}}<md-icon ng-attr-style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Go to gallery {{tile.name}}" md-font-library="material-icons">chevron_right</md-icon></h3></md-grid-tile-footer>
+                        <a href="{{tile.settings.url}}">
+                            <img ng-src="{{tile.data.page.foreground.images.source}}" style="width: auto; max-width:300%; min-height: 100%;">
+                            <md-grid-tile-footer md-truncate ng-class="{'active': hovered}"><h3 style="white-space: pre-wrap;">{{tile.data.title}}<md-icon ng-attr-style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Go to gallery {{tile.data.title}}" md-font-library="material-icons">chevron_right</md-icon></h3></md-grid-tile-footer>
                         </a>
+                    </md-grid-tile>
+                </md-grid-list>
+            </div>
+        </div>
+
+        <div class="container navigation widget featured_items" layout-margin flex="100" layout="row" layout-align="center center" layout-wrap ng-show="menu_title == 'People'">
+            <div flex="100" layout-margin>
+                <md-grid-list md-cols="4" md-cols-xs="4" md-cols-sm="4" md-cols-md="6" md-cols-gt-md="6" md-row-height-gt-md="175px" md-row-height-gt-sm="200px" md-row-height="125px" md-gutter="8px" md-gutter-gt-sm="4px">
+                    <md-grid-tile class="md-whiteframe-4dp" ng-repeat="tile in settings.staff.members | limitTo: 4" md-rowspan="2" md-rowspan-xs="1" md-rowspan-sm="1" md-colspan="4" md-colspan-gt-md="3" md-colspan-md="3" md-colspan-sm="4" md-colspan-xs="4" style="overflow: hidden;" ng-init="hovered = false">
+                        <img ng-src="{{tile.source}}" style="width: auto; max-width:300%; min-height: 100%;">
+                        <md-grid-tile-footer md-truncate ng-class="{'active': hovered}"><h3 style="white-space: pre-wrap;">{{tile.name}}<md-icon ng-attr-style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Go to gallery {{tile.name}}" md-font-library="material-icons">chevron_right</md-icon></h3></md-grid-tile-footer>
                     </md-grid-tile>
                 </md-grid-list>
             </div>
@@ -81,7 +93,6 @@
 								<div class="md-list-item-text">
 									<h3 ng-attr-style="color: {{base_hue_lightest.value}}">{{settings.data.address.street}} </h3>
 									<h3 ng-attr-style="color: {{base_hue_lightest.value}}">{{settings.data.address.city}}, {{ settings.data.address.state}} {{settings.data.address.zipcode}}</h3>
-									
 								</div>
 							</md-list-item>
                     </md-content>
@@ -120,12 +131,67 @@
                 </md-tab>
             </md-tabs>
         </div>
+
+        <div ng-show="menu_title == 'Services'" layout="row" layout-align="center center" flex="100" layout-margin class="navigation widget" style="min-width: 100%;">
+            <md-tabs md-dynamic-height md-border-bottom style="min-width: 100%; margin-top: 32px; margin-bottom: 32px;">
+                <md-tab label="Contact Us!">
+                    <md-content class="md-padding" style="background-color: transparent!important;">
+                        <div style="text-align: center">
+                            <div ng-include ng-show="progressAnimation" src="'application/partials/loading-spinner.html'"></div>
+                        </div>
+                        <form name="navigation" ng-show="!progressAnimation">
+                            <!-- <div style="text-align: center">
+                                <h1>Contact MMA Today!</h1>
+                            </div> -->
+                            <md-card-content>
+                                <md-list-item>
+                                    <md-input-container class="md-block lightweight-md-input">
+                                        <label style="color: {{base_hue_lightest.value}}!important">Full Name</label>
+                                        <input name="name" ng-model="navForm.name" minlength="4" required>
+                                        <div ng-messages="navigation.name.$error" ng-show="navigation.name.$dirty">
+                                            <div ng-message="required">Name required!</div>
+                                            <div ng-message="minlength">Name too short!</div>
+                                        </div>
+                                    </md-input-container>
+                                </md-list-item>
+                                <md-list-item>
+                                    <md-input-container class="md-block lightweight-md-input">
+                                        <label style="color: {{base_hue_lightest.value}}!important">Email</label>
+                                        <input type="email" name="email" ng-model="navForm.email" required>
+                                        <div ng-messages="navigation.email.$error" ng-show="navigation.email.$dirty">
+                                            <div ng-message="required">Email required!</div>
+                                            <div ng-message="email">Enter a valid email!</div>
+                                        </div>
+                                    </md-input-container>
+                                </md-list-item>
+                                <md-list-item>
+                                    <md-input-container class="md-block lightweight-md-input" flex>
+                                        <label style="color: {{base_hue_lightest.value}}!important">Message</label>
+                                        <textarea name="message" md-detect-hidden="true" ng-model="navForm.message" rows="3" minlength="10" md-maxlength="250" required></textarea>
+                                        <div ng-messages="navigation.message.$error" ng-show="navigation.message.$dirty">
+                                            <div ng-message="required">Message required!</div>
+                                            <div ng-message="minlength">Message too short!</div>
+                                            <div ng-message="md-maxlength">Message too long!</div>
+                                        </div>
+                                    </md-input-container>
+                                </md-list-item>
+                                <div vc-recaptcha key="'6LdzITUUAAAAAJc60kmGZt8DBnyf-xbdPkv8JDff'" ng-model="navForm.recaptcha" style="margin: 0 16px;"></div>
+                                <br>
+                            </md-card-content>
+                            <md-button ng-disabled="navigation.$invalid" ng-click="sendLead(navForm, 'Navigation'); clearForm(navForm)" class="md-fab custom-deep-button" aria-label="Edit Info Page" style="background-color: {{primary_hue_normal.value}}; position: absolute; bottom: -36px; right: 8px;">
+                                <md-icon style="color: {{base_hue_lighter.value}};">send</md-icon>
+                            </md-button>
+                        </form>
+                    </md-content>
+                </md-tab>
+            </md-tabs>
+        </div>
         
 
         <div class="navigation map-widget widget" ng-show="menu_title == 'About Us'" layout="row" layout-align="center center" flex="100" layout-margin class="navigation widget">
 
         	<!-- Map Widget -->
-            <div class="md-whiteframe-8dp" flex="100" layout="row" layout-align="center start" style="z-index: 2; position: relative; margin: 16px 0 40px 0;">
+            <div class="md-whiteframe-8dp" flex="100" layout="row" layout-align="center start" style="z-navigation: 2; position: relative; margin: 16px 0 40px 0;">
 				<div style="margin: 0; width: 100%" layout-wrap layout="row" layout-align="start center" flex>
 					<div flex="100" style="margin-bottom: -5px; position: relative;" layout-align="end center">
 						<iframe ng-src="{{trusted_google_address_widget_map}}" width="auto" height="400" frameborder="0" style="border:0; width: 100%;" allowfullscreen></iframe>
