--- a/lib/client/app/application/partials/navigation-dropdown.html
+++ b/lib/client/app/application/partials/navigation-dropdown.html
@@ -74,64 +74,6 @@
             </div>
         </div>
 
-
-        <div ng-show="menu_title == 'Contact Us'" layout="row" layout-align="center center" flex="100" layout-margin class="navigation widget" style="min-width: 100%;">
-            <md-tabs md-dynamic-height md-border-bottom style="min-width: 100%; margin-top: 32px; margin-bottom: 32px;">
-                <md-tab label="Contact Info">
-                    <md-content class="md-padding" style="background-color: transparent!important;">
-                        <md-list-item class="md-2-line">
-							<md-icon ng-attr-style="color: {{base_hue_lightest.value}}">phone</md-icon>
-							<div class="md-list-item-text">
-								<h3 ng-attr-style="color: {{base_hue_lightest.value}}">{{settings.data.phone_1}}</h3>
-								<p ng-attr-style="color: {{base_hue_lightest.value}}">Office</p>
-							</div>
-						</md-list-item>
-						<md-divider></md-divider>
-						<a class="addr_widget" ng-href="{{settings.data.address.google_address_link}}" target="_blank">
-							<md-list-item class="md-2-line">
-								<md-icon ng-attr-style="color: {{base_hue_lightest.value}}">location_on</md-icon>
-								<div class="md-list-item-text">
-									<h3 ng-attr-style="color: {{base_hue_lightest.value}}">{{settings.data.address.street}} </h3>
-									<h3 ng-attr-style="color: {{base_hue_lightest.value}}">{{settings.data.address.city}}, {{ settings.data.address.state}} {{settings.data.address.zipcode}}</h3>
-								</div>
-							</md-list-item>
-                    </md-content>
-                </md-tab>
-                <md-tab label="Hours">
-                    <md-content class="md-padding" style="background-color: transparent!important;">
-                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
-                        Sunday <p class="md-secondary">{{settings.data.hours.sunday.start == 'Closed' ? 'Closed' : settings.data.hours.sunday.start + ' - '}}{{settings.data.hours.sunday.end == 'Closed' ? '' : settings.data.hours.sunday.end}}</p>
-                        </md-list-item>
-                        <md-divider></md-divider>
-                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
-                        Monday <p class="md-secondary">{{settings.data.hours.monday.start == 'Closed' ? 'Closed' : settings.data.hours.monday.start + ' - '}}{{settings.data.hours.monday.end == 'Closed' ? '' : settings.data.hours.monday.end}}</p>
-                        </md-list-item>
-                        <md-divider></md-divider>
-                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
-                        Tuesday <p class="md-secondary">{{settings.data.hours.tuesday.start == 'Closed' ? 'Closed' : settings.data.hours.tuesday.start + ' - '}}{{settings.data.hours.tuesday.end == 'Closed' ? '' : settings.data.hours.tuesday.end}}</p>
-                        </md-list-item>
-                        <md-divider></md-divider>
-                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
-                        Wednesday <p class="md-secondary">{{settings.data.hours.wednesday.start == 'Closed' ? 'Closed' : settings.data.hours.wednesday.start + ' - '}}{{settings.data.hours.wednesday.end == 'Closed' ? '' : settings.data.hours.wednesday.end}}</p>
-                        </md-list-item>
-                        <md-divider></md-divider>
-                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
-                        Thursday <p class="md-secondary">{{settings.data.hours.thursday.start == 'Closed' ? 'Closed' : settings.data.hours.thursday.start + ' - '}}{{settings.data.hours.thursday.end == 'Closed' ? '' : settings.data.hours.thursday.end}}</p>
-                        </md-list-item>
-                        <md-divider></md-divider>
-                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
-                        Friday <p class="md-secondary">{{settings.data.hours.friday.start == 'Closed' ? 'Closed' : settings.data.hours.friday.start + ' - '}}{{settings.data.hours.friday.end == 'Closed' ? '' : settings.data.hours.friday.end}}</p>
-                        </md-list-item>
-                        <md-divider></md-divider>
-                        <md-list-item class="secondary-button-padding" ng-attr-style="color: {{base_hue_lightest.value}};">
-                        Saturday <p class="md-secondary">{{settings.data.hours.saturday.start == 'Closed' ? 'Closed' : settings.data.hours.saturday.start + ' - '}}{{settings.data.hours.saturday.end == 'Closed' ? '' : settings.data.hours.saturday.end}}</p>
-                        </md-list-item>
-                        <md-divider></md-divider>
-                    </md-content>
-                </md-tab>
-            </md-tabs>
-        </div>
-
         <div ng-show="menu_title == 'Services'" layout="row" layout-align="center center" flex="100" layout-margin class="container navigation widget" style="min-width: 100%;">
             <div class="md-whiteframe-8dp" flex="100" layout="row" layout-align="center start" style="z-index: 2; position: relative; background: {{base_hue_lightest.value}}; margin-bottom: 48px;">
                 <div style="text-align: center">
@@ -184,7 +126,7 @@
         </div>
         
 
-        <div class="navigation map-widget widget" ng-show="menu_title == 'About Us'" layout="row" layout-align="center center" flex="100" layout-margin class="navigation widget">
+        <div class="navigation map-widget widget" ng-if="menu_title == 'About Us'" layout="row" layout-align="center center" flex="100" layout-margin class="navigation widget">
 
         	<!-- Map Widget -->
             <div class="md-whiteframe-8dp" flex="100" layout="row" layout-align="center start" style="z-index: 2; position: relative; margin: 16px 0 40px 0;">
